--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,5 +4,5 @@
         <meta charset="utf-8">
         <title>ToDo List</title>
         <link rel="stylesheet" href="css/styles.css">
-    </head>
-    <body>
+        <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    
