--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,21 +1,112 @@
 <%- include("header") %>
-        <div class="box" id="heading">
-            <h1><%= listTitle %></h1>
+
+<style>
+    body {
+      font-family: "Lato", sans-serif;
+    }
+    
+    .sidepanel  {
+      width: 0;
+      position: fixed;
+      z-index: 1;
+      height: 100%;
+      top: 0;
+      left: 0;
+      background-color: transparent;
+      overflow-x: hidden;
+      transition: 0.5s;
+      padding-top: 60px;
+    }
+    
+    .sidepanel a {
+      padding: 8px 8px 8px 32px;
+      text-decoration: none;
+      font-size: 25px;
+      color: white;
+      display: block;
+      transition: 0.3s;
+    }
+    
+    .sidepanel a:hover {
+      color: black;
+    }
+
+    .delete{
+        border: 0px;
+        padding: 0%;
+        background-color: transparent;
+    }
+    
+    .sidepanel .closebtn {
+      position: absolute;
+      top: 0;
+      right: 25px;
+      font-size: 36px;
+    }
+    
+    .openbtn {
+      font-size: 20px;
+      cursor: pointer;
+      background-color: #A683E3;
+      color: white;
+      padding: 10px 15px;
+      border: none;
+      border-radius: 8px;
+    }
+    
+    .openbtn:hover {
+      background-color:#444;
+    }
+    </style>
+    </head>
+    
+    <body>
+        <div id="mySidepanel" class="sidepanel">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+            <% newlists.forEach((name)=>{ %>
+                <div class="listitem">
+                    <a style="display: inline-flex;" href="<%= name %>"><%= name %></a> 
+                    <form style="display: inline;" action="/delete" method="post">
+                        <button class="delete" type="submit">✖</button>
+                        <input type="hidden" name="name" value="<%=name%>"></input>
+                    </form>
+                </div>
+            <% }) %>
         </div>
-        <div class="box">
-            <% newitems.forEach((item)=>{ %>
-                <form action="/delete" method="post">
-                    <div class="item">
-                        <input type="checkbox" name="checkbox" value="<%= item._id %>" onChange="this.form.submit()">
-                        <p><%= item.name %></p>
-                    </div>
-                    <input type="hidden" name="listname" value="<%=listTitle%>"></input>
+    
+        <div id="main">
+            <button class="openbtn" onclick="openNav()">☰ Lists</button>
+
+            <div class="box" id="heading">
+                <h1><%= listTitle %></h1>
+            </div>
+
+            <div class="box">
+                <% newitems.forEach((item)=>{ %>
+                    <form action="/delete" method="post">
+                        <div class="item">
+                            <input type="checkbox" name="checkbox" value="<%= item._id %>" onChange="this.form.submit()">
+                            <p><%= item.name %></p>
+                        </div>
+                        <input type="hidden" name="listname" value="<%=listTitle%>"></input>
+                    </form>
+                <% }) %>            
+            
+                <form class="item" action="/" method="post">
+                    <input type="text" name="newitem" placeholder="New Item" autocomplete="offs">
+                    <button class="btn" type="submit" name="list" value=<%= listTitle %>>+</button>
                 </form>
-            <% }) %>            
-        
-            <form class="item" action="/" method="post">
-                <input type="text" name="newitem" placeholder="New Item" autocomplete="offs">
-                <button class="btn" type="submit" name="list" value=<%= listTitle %>>+</button>
-            </form>
+            </div>
         </div>
+
+        <script>
+            function openNav() {
+              document.getElementById("mySidepanel").style.width = "250px";
+            }
+            
+            function closeNav() {
+              document.getElementById("mySidepanel").style.width = "0";
+            }
+        </script>
+
 <%- include("footer") %>
